// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apply property in theme works correctly 1`] = `
<DocumentFragment>
  <code
    class="css-pc6dmb"
  >
    code
  </code>
</DocumentFragment>
`;

exports[`attrs option works correctly 1`] = `
<DocumentFragment>
  <button
    class="css-159gof9"
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`chakra elements - renders with style props 1`] = `
<DocumentFragment>
  <div
    class="css-y1gt6f"
  >
    Welcome
  </div>
</DocumentFragment>
`;

exports[`chakra function - renders currently 2`] = `
<DocumentFragment>
  <button
    class="css-gmtise"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`it allows pass through props 1`] = `
<DocumentFragment>
  <img
    data-testid="img"
    width="60px"
  />
</DocumentFragment>
`;

exports[`it renders component using theme key 1`] = `
<DocumentFragment>
  <span
    class="css-1k45lh6"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`it renders with base style 1`] = `
<DocumentFragment>
  <div
    class="css-pfs33m"
  >
    Hey!
  </div>
</DocumentFragment>
`;

exports[`sx prop works on jsx element 1`] = `
<DocumentFragment>
  <button
    class="css-1qapnz0"
  >
    Click
  </button>
</DocumentFragment>
`;
